@@ -4,7 +4,7 @@
 
 <center>
 <img src="jedit.png" width="128" height="128">
-<h1>Welcome to jEdit 4.1!</h1>
+<h1>Welcome to jEdit 4.2!</h1>
 </center>
 
 <p>jEdit is free software, and you are welcome to redistribute it
@@ -19,8 +19,8 @@ Manager</b>.</p>
 
 <p>To customize jEdit, select <b>Utilities</b>&gt;<b>Global Options</b>.</p>
 
-<p>If you have upgraded from jEdit 4.0, you should check out
-<a href="NEWS.txt">what's new</a> in version 4.1.</p>
+<p>If you have upgraded from jEdit 4.1, you should check out
+<a href="NEWS.txt">what's new</a> in version 4.2.</p>
 
 <p>If you think you have found a bug, please consult the
 <a href="FAQ/index.html">Frequently Asked Questions</a> document first.</p>
